Fix img header on iphone5

--- a/css/style.css
+++ b/css/style.css
@@ -541,7 +541,7 @@ header p {
 
 .imagem {
   max-width: 80%;
-  height: 300px;
+  height: 260px;
   margin-top: 30px;
   -webkit-border-radius: 100%;
   border-radius: 100%; }
