--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -35,7 +35,7 @@ header p {
 
 .imagem {
   max-width: 80%;
-  height: 300px;
+  height: 260px;
   margin-top: 30px;
   border-radius: 100%;
 }
